fixed header and navbar intinally

--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -1,13 +1,16 @@
 <div class="header-box">
   <app-navbar></app-navbar>
-
-  <!-- Mobile Menu Toggle -->
-  <div class="burger-icon" (click)="toggleMobileMenu()">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-
+  
+  <!-- Mobile Menu Toggle Button -->
+  <button class="mobile-menu-toggle" [class.active]="isMobileMenuOpen" (click)="toggleMobileMenu()">
+    <span class="hamburger-line"></span>
+    <span class="hamburger-line"></span>
+    <span class="hamburger-line"></span>
+  </button>
+  
+  <!-- Mobile Menu Overlay -->
+  <div class="mobile-menu-overlay" [class.active]="isMobileMenuOpen" (click)="toggleMobileMenu()"></div>
+  
   <!-- Desktop Nav -->
   <div class="header-right">
     <nav class="header__menu">
@@ -18,14 +21,16 @@
           <div class="dropdown-content-nav">
             <div class="two-pane">
               <ul class="continent-column">
-                <li *ngFor="let destination of destinationGroup.destinations" [class.active]="selectedContinent === destination" (click)="selectContinent(destination)">
-                  {{ destination.name }}
+                <li *ngFor="let destination of destinationGroup.destinations" 
+                    [class.active]="selectedContinent === destination" 
+                    (click)="selectContinent(destination)">
+                  {{ destination.name }} 
                 </li>
               </ul>
               <div class="country-column" *ngIf="selectedContinent">
                 <div class="continent-header">
                   <a [routerLink]="selectedContinent.route" [queryParams]="selectedContinent.queryParams">
-                    {{ selectedContinent.name }}
+                    {{ selectedContinent.name }} Destinations
                   </a>
                   <span class="arrow-indicator"></span>
                 </div>
@@ -41,63 +46,59 @@
             </div>
           </div>
         </li>
-
-        <!-- Package Groups -->
-        <ng-container *ngFor="let group of navGroups">
-          <li>
-            <button class="custom-btn nav-btn" [routerLink]="group.items[0].route" [queryParams]="group.items[0].queryParams">
-              {{ group.label }}
-            </button>
-          </li>
-        </ng-container>
+        <!-- Info Links -->
+        <li><a routerLink="/contact" (click)="navigateTo('/contact')">FAQ | Help?</a></li>
+        <li><a routerLink="/careers" (click)="navigateTo('/careers')">Careers</a></li>
+        <li><a routerLink="/aboutUs" (click)="navigateTo('/aboutUs')">About us</a></li>
+        <li><a routerLink="/travelGuide" (click)="navigateTo('/travelGuide')">Travel Guides</a></li>
       </ul>
-      <div class="header__button">
-        <button class="custom-btn" (click)="customizeHoliday()" routerLink="/itinerary">Customize My Holiday</button>
-      </div>
     </nav>
   </div>
 
-  <!-- Mobile Sidebar -->
-  <div class="mobile-sidebar" [class.open]="isMobileMenuOpen">
-    <div class="close-btn" (click)="toggleMobileMenu()">×</div>
-    <ul class="mobile-menu">
-      <!-- Mobile Destinations -->
-      <li class="dropdown-mobile" [class.active]="isDropdownOpen" (click)="toggleDropdown($event)">
-        <div class="mobile-group-label">
-          {{ destinationGroup.label }}
+  <!-- Mobile Menu -->
+  <div class="mobile-menu" [class.active]="isMobileMenuOpen">
+    <div class="mobile-menu-header">
+      <button class="back-button" (click)="toggleMobileMenu()">
+        <span class="back-arrow"></span>
+        {{ destinationGroup.label }}
+      </button>
+    </div>
+    <ul class="mobile-menu-list">
+      <li 
+        class="mobile-destinations"
+        *ngFor="let destination of destinationGroup.destinations"
+        [class.expanded]="expandedContinent === destination"
+      >
+        <div class="mobile-dropdown-toggle" (click)="toggleContinent(destination)">
+          {{ destination.name }}
+          <span class="arrow-right" [class.rotated]="expandedContinent === destination"></span>
         </div>
-        <ul class="mobile-submenu">
-          <ng-container *ngFor="let destination of destinationGroup.destinations">
-            <li class="mobile-destination-item">
-              <div class="mobile-destination-header" (click)="toggleDestinationLocations($event)">
-                <a [routerLink]="destination.route" [queryParams]="destination.queryParams" (click)="toggleMobileMenu()" class="mobile-destination-link">
-                  {{ destination.name }}
-                </a>
-                <span class="mobile-arrow" *ngIf="destination.locations.length > 0">▼</span>
-              </div>
-              <ul class="mobile-location-list" *ngIf="destination.locations.length > 0">
-                <li *ngFor="let location of destination.locations">
-                  <a [routerLink]="location.route" [queryParams]="location.queryParams" (click)="toggleMobileMenu()" class="mobile-location-link">
-                    {{ location.name }}
-                  </a>
-                </li>
-              </ul>
+        <div class="mobile-dropdown-content" [class.active]="expandedContinent === destination">
+          <ul class="mobile-countries">
+            <li *ngFor="let location of destination.locations">
+              <a 
+                [routerLink]="location.route"
+                [queryParams]="location.queryParams"
+                (click)="navigateTo(location.route)"
+              >
+                {{ location.name }}
+              </a>
             </li>
-          </ng-container>
-        </ul>
+          </ul>
+        </div>
       </li>
-
-      <!-- Mobile Package Groups -->
-      <ng-container *ngFor="let group of navGroups">
-        <li>
-          <button class="custom-btn nav-btn" [routerLink]="group.items[0].route" [queryParams]="group.items[0].queryParams" (click)="toggleMobileMenu()">
-            {{ group.label }}
-          </button>
-        </li>
-      </ng-container>
-
-      <li>
-        <button class="custom-btn" (click)="customizeHoliday(); toggleMobileMenu()" routerLink="/itinerary">Customize My Holiday</button>
+      <!-- Info Links in Mobile Menu -->
+      <li class="mobile-info-links">
+        <a routerLink="/contact" (click)="navigateTo('/contact')">FAQ | Help?</a>
+      </li>
+      <li class="mobile-info-links">
+        <a routerLink="/careers" (click)="navigateTo('/careers')">Careers</a>
+      </li>
+      <li class="mobile-info-links">
+        <a routerLink="/aboutUs" (click)="navigateTo('/aboutUs')">About us</a>
+      </li>
+      <li class="mobile-info-links">
+        <a routerLink="/travelGuide" (click)="navigateTo('/travelGuide')">Travel Guides</a>
       </li>
     </ul>
   </div>
