--- a/src/app/common/navbar/navbar.component.scss
+++ b/src/app/common/navbar/navbar.component.scss
@@ -118,9 +118,9 @@ $transition: 0.3s ease;
 .custom-btn {
   background-color: transparent;
   color: $color-accent;
-  border: 2px solid #fff;
+  // border: 2px solid #fff;
   padding: 8px 16px;
-  border-radius: 25px;
+  // border-radius: 25px;
   font-family: $font-accent;
   font-size: 16px;
   text-transform: uppercase;
