removed sign up role

--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -58,10 +58,10 @@
         <label for="role" [class.filled]="role">Role</label>
         <select id="role" [(ngModel)]="role" name="role" required>
           <option value="user">User</option>
-          <option value="manager">Manager</option>
-          <option value="admin">Admin</option>
+          <!-- <option value="manager">Manager</option>
+          <option value="admin">Admin</option> -->
         </select>
-        <i class="fa fa-user input-icon"></i>
+        <i class="fa fa-user input-icon"></i> 
       </div>
       
       <button type="submit" class="submit-btn">
