--- a/src/app/components/booking-modal/booking-modal.component.html
+++ b/src/app/components/booking-modal/booking-modal.component.html
@@ -119,7 +119,7 @@
           <label>Guests</label>
           <div class="guest-selection">
             <div class="guest-type">
-              <label for="booking-adults">Adults</label>
+              <label for="booking-adults">Adults (age 12+)</label>
               <input
                 id="booking-adults"
                 type="number"
@@ -132,7 +132,7 @@
               />
             </div>
             <div class="guest-type">
-              <label for="booking-children">Children</label>
+              <label for="booking-children">Children (below 12)</label>
               <input
                 id="booking-children"
                 type="number"
