fixed itinerary routing

--- a/src/app/admin-layout/admin-layout.component.html
+++ b/src/app/admin-layout/admin-layout.component.html
@@ -50,7 +50,7 @@
         </li>
 
         <li class="nav-item">
-          <a routerLink="/admin/itineraries" class="nav-link" routerLinkActive="active">
+          <a routerLink="/admin/itinerary-admin" class="nav-link" routerLinkActive="active">
             <i class="nav-icon fas fa-route"></i>
             <span class="nav-text">Itineraries</span>
           </a>
