--- a/src/app/admin-layout/destinations/destinations.component.html
+++ b/src/app/admin-layout/destinations/destinations.component.html
@@ -73,7 +73,7 @@
                                     <img [src]="destination.image" [alt]="destination.name" class="destination-image">
                                     <div class="destination-info">
                                         <span class="destination-name">{{ destination.name }}</span>
-                                        <span class="destination-type">{{ destination.type }}</span>
+                                        <!-- <span class="destination-type">{{ destination.type }}</span> -->
                                     </div>
                                 </div>
                             </td>
