--- a/src/app/admin-layout/destinations/add-destination/add-destination.component.scss
+++ b/src/app/admin-layout/destinations/add-destination/add-destination.component.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Forum:wght@400&family=Playfair+Display:wght@400;500;600;700&display=swap');
 
-// Color Palette Variables (matching your theme)
+// Color Palette Variables
 $saffron: #F4A460;
 $turmeric-yellow: #E9B44C;
 $peacock-blue: #005F73;
@@ -123,6 +123,10 @@ $font-heading: 'Playfair Display', serif;
           &:last-child {
             margin-bottom: 0;
           }
+
+          &.single-column {
+            grid-template-columns: 1fr;
+          }
         }
 
         .form-group {
@@ -176,6 +180,10 @@ $font-heading: 'Playfair Display', serif;
               resize: vertical;
               min-height: 100px;
               line-height: 1.6;
+            }
+
+            &[type="file"] {
+              padding: 0.4rem;
             }
           }
 
