made pop up trip planner triggering on home

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -45,7 +45,7 @@
     <!-- </div> -->
   </section>
     <app-destinations></app-destinations>
-   
+   <!-- <button (click)="openTripPlanner()">Plan My Trip</button> -->
   </header>
 </section>
 
